# LearningKaruta

./: .env.development  .gitignore  README.MD  docker-compose.yml  package-lock.json  package.json
app/: Dockerfile  database.py  main.py  memo.md  pyproject.toml
app/cruds/: games.py  users.py
app/cruds/users/: register_user.py
app/csv/: answer_image_filepass.csv  answer_texts.csv  box.csv  boxes_cards.csv  cards.csv  load.sql  question_texts.csv
app/models/: __init__.py  games.py  mixins.py  users.py
app/routers/: games.py  users.py
app/schemas/: games.py  users.py
app/session/: session_token.py
app/src/: app.py  database.py  env.py
app/src/cruds/: games.py
app/src/models/: __init__.py  games.py
app/src/routers/: games.py  users.py
app/src/schemas/: games.py  users.py
app/test/migrations/: env.py
aws/: create-ec2.yml  create-vpc.yml
db/: alembic.ini
db/maigrations/versions/: b04942986dc2_.py  d9489014ad16_.py
db/migration/versions/: 2425fb2e1891_.py  41ded4d2b969_.py  506a0ca9fc1f_.py  514e1724c1fd_.py  818d3578277c_.py  859ba77eff45_.py  a650c944b5aa_.py  f85acc9d4850_.py
docker/api/: Dockerfile  requirements.txt
docker/db/: Dockerfile
docker/db/conf.d/: my.cnf
docker/front/: Dockerfile
front/: Dockerfile  package-lock.json  package.json  tailwind.config.js
front/src/: App.css  App.js  App.jsx  CommandKaruta.jsx  Draw.jsx  Drow.jsx  Karuta.jsx  Lose.jsx  MKaruta_M.jsx  Main.jsx  Victory.jsx  index.css  index.js  useInterval.jsx
mysql/: Dockerfile
mysql/DB/: init.sql
mysql/conf.d/: my.cnf
scripts/: run.sh
(+24 files in other folders)
